<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:background="@drawable/img_bg"
    	android:orientation="vertical"
    	android:paddingLeft="@dimen/LogonPaddingLeft"
    	android:paddingRight="@dimen/LogonPaddingRight"
    	android:paddingTop="@dimen/LogonPaddingTop"
        tools:context=".Register_new">

        <TableRow
            android:id="@+id/registertableRow1"
            android:layout_width="@dimen/LogonTextWidth"
            android:layout_height="@dimen/LogonTextHeight">

	    <EditText
	        android:id="@+id/registerusername"
	        android:singleLine="True"
	        android:layout_width="@dimen/LogonTextWidth"
	        android:layout_height="@dimen/LogonTextHeight"
	        android:textAlignment="center"
	        android:hint="@string/username" />
	    </TableRow>

	    <TableRow
	        android:id="@+id/registertablerow2"
	        android:layout_width="@dimen/LogonButtonWidth"
	        android:layout_height="@dimen/LogonButtonHeight"
	        android:paddingBottom="@dimen/LogonPaddingBottom">

	        <EditText
	            android:id="@+id/registerpassword"
	            android:singleLine="True"
	            android:inputType="textPassword"
	            android:layout_width="@dimen/LogonButtonWidth"
	            android:layout_height="@dimen/LogonButtonHeight"
	            android:hint="@string/password" />
        </TableRow>
         <TableRow
	        android:id="@+id/registertablerow3"
	        android:layout_width="@dimen/LogonButtonWidth"
	        android:layout_height="@dimen/LogonButtonHeight"
	        android:layout_marginRight="@dimen/LogonPaddingBottom" >
	        <EditText
	            android:id="@+id/registeremail"
	            android:inputType="textEmailAddress"
	            android:layout_width="@dimen/LogonButtonWidth"
	            android:layout_height="@dimen/LogonButtonHeight"
	            android:hint="@string/emailaddress" />
	        
	        </TableRow>
        <TableRow
            android:id="@+id/registertablerow4"
	       android:layout_width="@dimen/LogonButtonWidth"
	       android:layout_height="@dimen/LogonButtonHeight"
	        android:paddingBottom="@dimen/LogonPaddingBottom" >
             <Button
	            android:id="@+id/submitbutton"
 				android:layout_width="@dimen/LogonButtonWidth"
	            android:layout_height="@dimen/LogonButtonHeight"
	           	android:background="@color/bg"
	            android:text="@string/submitbutton" />
             </TableRow>
          
           <TableRow 
            android:id="@+id/registertablerow6"
	        	android:layout_height="@dimen/LogonTextHeight"
            android:layout_width="@dimen/LogonTextWidth"
            android:paddingBottom="@dimen/LogonPaddingBottom">
             
          <TextView 
              android:id="@+id/register_status"
      		  android:layout_height="@dimen/LogonTextHeight"
              android:layout_width="@dimen/LogonTextWidth"
              android:textColor="@color/bg"
              android:text="@string/register_status"
              />
          </TableRow>

    </TableLayout>